changed css for profileimg modal and bio modal, overlapping with discovery no longer much of a concern

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -670,6 +670,11 @@ header {
     margin-top: 30px;
 }
 
+#profilePic, #bioBox{
+    width: 500px;
+    margin-right: 14rem;
+}
+
 /* //////////////POSTCARD/////////////////// */
 
 .pcPicAndBlurb img {
